@@ -1,7 +1,7 @@
 [Module]
 Name=HTML::Timeline
 Changelog.Creator=Module::Metadata::Changes V 2.11
-Changelog.Parser=Config::IniFiles V 2.88
+Changelog.Parser=Config::IniFiles V 2.94
 
 [V 1.09]
 Date=2017-04-16T11:16:00
@@ -16,6 +16,9 @@ validate() is no longer called by default. Suggested by Nigel Horne. See RT#1209
 - In bin/timeline.pl, document much more clearly what values are taken by each option.
 Do the same in the pod.
 - Fix docs for new(). It takes a hash of options, not a hashref.
+- Add specific versions of pre-reqs in Makefile.PL.
+- Rewrite t/test.t to run bin/timeline.pl under control of Capture::Tiny, and check its output.
+This requires Capture::Tiny as a new pre-req.
 EOT
 
 [V 1.08]
